--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>יקב דורות |האתר הרשמי</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="1000.png">
+  <link rel="apple-touch-icon" href="1000.png">
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700;800&family=Heebo:wght@400;600;700;800&family=Cormorant+Garamond:wght@500;600;700&family=Rubik:wght@400;500;700&family=Varela+Round&family=Noto+Serif+Hebrew:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
 :root {
